--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,6 @@
   border-width: 0px;
 }
 
-html,
-body {
-  min-height: 100%;
-  height: 100%;
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -18,8 +12,7 @@ body {
 }
 
 #root {
-  min-height: 100%;
-  height: 100%;
+  background-color: red;
 }
 
 code {
